Fix textarea too large for its parent

--- a/style.css
+++ b/style.css
@@ -108,4 +108,5 @@ textarea {
     flex-grow: 1;
     min-height: 1em;
     resize: none;
+    box-sizing: border-box;
 }
